# gnome-usage

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  NEWS  README.md  gnome-usage.avprj  gnome-usage.doap  meson.build  meson_options.txt  org.gnome.Usage.json
build-aux/flatpak/: org.gnome.Usage.Devel.json  org.gnome.Usage.json~
build-aux/meson/: postinstall.sh
build-aux/test/: i18n-strings-check.sh  vala-lint.conf
data/: CMakeLists.txt  meson.build  org.gnome.Usage.appdata.xml.in  org.gnome.Usage.appdata.xml.in.in  org.gnome.Usage.desktop  org.gnome.Usage.desktop.in  org.gnome.Usage.desktop.in.in  org.gnome.Usage.gresource.xml  org.gnome.Usage.gschema.xml  org.gnome.Usage.gschema.xml.in  org.gnome.Usage.metainfo.xml.in.in  org.gnome.Usage.search-provider.in  org.gnome.Usage.service.in  style.css
data/interface/: CMakeLists.txt  adwaita-dark.css  adwaita.css
data/local/: CMakeLists.txt  adwaita-dark.css  adwaita.css
data/ui/: app-dialog.ui  better-box.ui  cpu-sub-view.ui  cpu-view.ui  disk-sub-view.ui  header-bar.ui  loading-notification.ui  memory-speedometer.ui  memory-view.ui  network-view.ui  no-results-found-box.ui  no-results-found-view.ui  performance-view.ui  primary-menu.ui  process-dialog.ui  process-row.ui  quit-process-dialog.ui  speedometer.ui  storage-actionbar.ui  storage-row-popover.ui  storage-view-row.ui  storage-view.ui  sub-process-list-box.ui  sub-process-sub-row.ui  swap-speedometer.ui  switcher-row.ui  window.ui
doc/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  POTFILES.in  POTFILES.skip  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+7 more)
rpmbuild/RPMS/x86_64/: gnome-usage-0.3.2-1.x86_64.rpm  gnome-usage-0.3.3-1.x86_64.rpm  gnome-usage-0.3.4-1.x86_64.rpm  gnome-usage-0.3.5-1.x86_64.rpm  gnome-usage-0.3.6-1.x86_64.rpm  gnome-usage-0.3.7-1.x86_64.rpm  gnome-usage-0.3.8-1.x86_64.rpm
rpmbuild/SPECS/: gnome-usage.spec
rpmbuild/SRPMS/: gnome-usage-0.3.2-1.src.rpm  gnome-usage-0.3.3-1.src.rpm  gnome-usage-0.3.4-1.src.rpm  gnome-usage-0.3.5-1.src.rpm  gnome-usage-0.3.6-1.src.rpm  gnome-usage-0.3.7-1.src.rpm  gnome-usage-0.3.8-1.src.rpm
src/: CMakeLists.txt  animated-scrolled-window.vala  app-dialog.vala  app-item.vala  application.vala  background-monitor.vala  better-box.c  better-box.h  better-box.vala  color-rectangle.vala  cookie-graph.vala  cpu-graph-model.vala  cpu-graph-table.vala  cpu-graph.vala  cpu-monitor.vala  cpu-sub-view.vala  cpu-subview.vala  cpu-view.vala  data-view.vala  dbus-client.vala  disk-graph-model.vala  disk-graph-table.vala  disk-graph.vala  disk-monitor.vala  disk-sub-view.vala  game-mode.vala  gnome-usage.vala  graph-block-row.vala  graph-block.vala  graph-box.vala  graph-stack-switcher.vala  graph-stacked-renderer.vala  graph-switcher-button.vala  graph.vala  header-bar.vala  headerbar.vala  loading-notification.vala  memory-graph-model.vala  memory-graph-table.vala  memory-graph.vala  (+50 more)
src/network/: network-interface-graph.vala  network-view.vala  vnstat.vala
src/storage/: query-builder.vala  sparql-controller.vala  sparql-worker.vala  storage-actionbar.vala  storage-graph.vala  storage-row-popover.vala  storage-view-item.vala  storage-view-row.vala  storage-view.vala  tracker-controller.vala  tracker-worker.vala
src/vapis/: better.vapi  egg-private.vapi  glibtop.vapi  libgtop-2.0.vapi  netinfo.vapi  rg.vapi
vapi/: config.vapi  egg.vapi  libdazzle-1.0.vapi  libgtop-2.0.vapi  rg.vapi  stopgap.vapi
