vala_sources = [
  'app-dialog.vala',
  'app-item.vala',
  'application.vala',
  'background-monitor.vala',
  'cpu-graph.vala',
  'cpu-monitor.vala',
  'cpu-view.vala',
  'gnome-usage.vala',
  'game-mode.vala',
  'graph.vala',
  'graph-box.vala',
  'memory-graph.vala',
  'memory-monitor.vala',
  'memory-speedometer.vala',
  'memory-view.vala',
  'monitor.vala',
  'network/network-interface-graph.vala',
  'network/network-view.vala',
  'network/vnstat.vala',
  'no-results-found-view.vala',
  'performance-graph-view.vala',
  'process-list-box.vala',
  'process-row-item.vala',
  'process-user-tag.vala',
  'process.vala',
  'quit-process-dialog.vala',
  'settings.vala',
  'speedometer.vala',
  'stack-list.vala',
  'storage/storage-actionbar.vala',
  'storage/storage-graph.vala',
  'storage/query-builder.vala',
  'storage/storage-view-item.vala',
  'storage/storage-view.vala',
  'storage/storage-view-row.vala',
  'storage/sparql-controller.vala',
  'storage/sparql-worker.vala',
  'swap-speedometer.vala',
  'system-monitor.vala',
  'utils.vala',
  'view.vala',
  'window.vala'
]

deps = [
  gee_dep,
  gio_dep,
  gio_unix_dep,
  glib_dep,
  gobject_dep,
  gtk_dep,
  json_dep,
  libgtop_dep,
  libnm_dep,
  tinysparql_dep,
  libadwaita_dep,
  cc.find_library('m'),
  valac.find_library('config', dirs: vapi_dir),
  valac.find_library('stopgap', dirs: vapi_dir),
  valac.find_library('posix')
]

c_args = [
  '-DVERSION="@0@@1@"'.format(meson.project_version(), version_suffix),
  '-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()),
  '-DGNOMELOCALEDIR="@0@"'.format(join_paths(get_option('prefix'), get_option('localedir'))),
  '-DPROFILE="@0@"'.format(profile),
  '-DAPPLICATION_ID="@0@"'.format(application_id),
  '-DAPPLICATION_RESOURCE_PATH="@0@"'.format(resource_path),
  '-DG_LOG_DOMAIN="@0@"'.format(meson.project_name()),
]

executable(
  meson.project_name(),
  vala_sources + resources,
  dependencies: deps,
  c_args: c_args,
  vala_args: vapi_dirs,
  install: true
)
